; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/utilities/extr_utalloc.c_AcpiOsAllocateZeroed.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/acpica/utilities/extr_utalloc.c_AcpiOsAllocateZeroed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @AcpiOsAllocateZeroed(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call i32 (...) @ACPI_FUNCTION_ENTRY()
  %5 = load i32, i32* %2, align 4
  %6 = call i8* @AcpiOsAllocate(i32 %5)
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @memset(i8* %10, i32 0, i32 %11)
  br label %13

13:                                               ; preds = %9, %1
  %14 = load i8*, i8** %3, align 8
  ret i8* %14
}

declare dso_local i32 @ACPI_FUNCTION_ENTRY(...) #1

declare dso_local i8* @AcpiOsAllocate(i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
